@@ -24,13 +24,14 @@ def parseParams(input):
 	return params
 
 # Initialize convenience constants
-ADDON_PATH = sys.argv[0]
-ADDON_ID = ADDON_PATH[9:-1]
-ADDON_HANDLE = int(sys.argv[1])
+ADDON_ID = os.path.basename(os.getcwd())
 ADDON = xbmcaddon.Addon(id = ADDON_ID)
 ADDON_DATA_PATH = xbmc.translatePath(ADDON.getAddonInfo("Profile"))
-ADDON_PARAMS = parseParams(sys.argv[2][1:])
+if(len(sys.argv) > 1):
+	ADDON_PATH = sys.argv[0]
+	ADDON_HANDLE = int(sys.argv[1])
+	ADDON_PARAMS = parseParams(sys.argv[2][1:])
 
-# Create addon data path
-if(not os.path.isdir(os.path.dirname(ADDON_DATA_PATH))):
-	os.makedirs(os.path.dirname(ADDON_DATA_PATH))
+	# Create addon data path
+	if(not os.path.isdir(os.path.dirname(ADDON_DATA_PATH))):
+		os.makedirs(os.path.dirname(ADDON_DATA_PATH))
